@@ -11,9 +11,10 @@ remove = BumpVersion
 remove = PkgVersion
 
 [Prereq]
-Net::GitHub = 0.08
+Net::GitHub = 0.09
 Term::ReadLine = 0
 JSON::XS = 2.232
+Moose = 0
 
 [PodWeaver]
 
