@@ -2,6 +2,7 @@ Revision history for Perl extension App-GitHub
 
 0.05    2009.04.20
         more and more commands
+        i.search, i.comment
 
 0.04    2009.04.20
         more
